fixed the login ,pirsonal info,Submit your preference buttons ,and the colors of selected shifts explanation

--- a/MediaBazaar Website/CSSFiles/PreferedShift.css
+++ b/MediaBazaar Website/CSSFiles/PreferedShift.css
@@ -145,21 +145,21 @@
 
 /*Submit_Button*/
 .btn_submit_form{
-    height: 40px;
-    background-color: #889794;
-    border: none;
-    color: white;
+    height: 60px;
+    background-color: #07634C;
+    border: black;
+    color: rgb(3, 3, 3);
     padding: 15px 32px;
     text-decoration: none;
     font-size: 16px;
-    opacity: 0.5;
+    opacity: 1;
     display: flex;
     align-items: center;
     justify-content: center;
     float: right;
   }
   .btn_submit_form:hover{
-    opacity: 1;
+    background-color: #A7C5BD;
   }
 
 
@@ -168,4 +168,24 @@
 {
   text-align: center;
   color: #2b221f;
+}
+/* the user explaination for colors */
+.box {
+  height: 20px;
+  width: 20px;
+  margin-bottom: 15px;
+  margin-left: 15px;
+  border: 1px solid black;
+  position: relative;
+}
+
+
+.lightGreen {
+  background-color: #A7C5BD;
+  float: left;
+}
+
+.darkGreen {
+  background-color:  #07634C;
+  float: left;
 }
